MonetDB5/src/mal/Tests/tst2015.stable
# Monet Database Server V5.0
# Copyright (c) 1993-2002, CWI. All rights reserved.
# compiled for i686-pc-linux-gnu/32bit.
# gdk_dbfarm:/ufs/mk/monet_5-0/Linux/../dbfarm
# gdk_dbname:demo
# gdk_dbdir:/ufs/mk/monet_5-0/Linux/../dbfarm/demo
# gdk_distr:/ufs/mk/monet_5-0/Linux
# monetrc:/ufs/mk/.monet.conf
## parallel syntax checks
#
#barrier xx;
#
#fork b1;
#	leave b1;
#	redo xx;	# not allowed
#end b1;
#end xx;
#
!ERROR: REDO illegal in parallel block
!ERROR: label 'b1' not in guarded block in main[3]
function Admin.main():int; #0:(main:int)
barrier xx; #1:(xx:any) jump 7
fork b1 ; #2:(b1:any) jump 6
    leave b1; #3:(b1:any) jump 6
    redo xx ; #4:(xx:any) jump 1
end b1; #5:(b1:any)
end xx; #6:(xx:any)
end main; #7:
!ERROR: SyntaxError:Admin.main[0]:'Admin.main' contains errors
>